--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -49,7 +49,7 @@
                             <div class="row">
                                 <div class="col-md-3 form-group" th:class="${#fields.hasErrors('description')}
                                 ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
-                                    <label>Recipe Description:</label>
+                                    <label th:text="#{recipe.description}">Recipe Description:</label>
                                     <input type="text" class="form-control" th:field="*{description}"
                                            th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('description')}">
@@ -58,6 +58,7 @@
                                         </ul>
                                     </span>
                                 </div>
+                            </div>
                                 <div class="row">
                                     <div class="col-md-3 form-group">
                                         <label>Categories:</label>
@@ -200,7 +201,6 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
-                </div>
             </form>
         </div>
     </div>
